@startuml
package gameLaby.laby{
class Labyrinthe{
+ <static final> MUR: char
+ <static final> PJ: char
+ <static final> VIDE: char
+ <static final> HAUT: String
+ <static final> BAS: String
+ <static final> GAUCHE: String
+ <static final> DROITE: String
+ <static final> MONSTRE : char
+ <static final> ESCALIERUP : char
+ <static final> ESCALIERDOWN : char
+ murs : boolean[][]
+ Labyrinthe(String nom)
+ getSuivant(int x, int y, String action) : int[]
+ deplacerEntitee(Entite e, String action)
+ etreFini(): boolean
+ getLengthY(): int
+ getLength(): int
+ getMur(int x, int y): boolean
+ getEntite(int x, int y) : Entite
+ getEntites()

}
class Perso{
+Perso(int dx, int dy)
}
Abstract class Entité{
- x : int
- y : int
- collision : boolean
+ etrePresent(int dx, int dy): boolean
+setX()
+setY()
+getX(): int
+getY(): int
+{abstract}deplacer()
}
class Monstre{
+deplacer()
}
}
Labyrinthe "1" --> "*" Entité : monstres
Labyrinthe "1" --> "1" Perso : + pj
Entité <|-- Monstre
Entité <|-- Perso
@enduml